feat(spv-794) - review fixes
