# docs/swagger.yaml
@@ -1815,28 +1815,6 @@ definitions:
     - 1000000000
     - 60000000000
     - 3600000000000
-    - -9223372036854775808
-    - 9223372036854775807
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
-    - 60000000000
-    - 3600000000000
-    - -9223372036854775808
-    - 9223372036854775807
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
-    - 60000000000
-    - 3600000000000
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
-    - 60000000000
-    - 3600000000000
     type: integer
     x-enum-varnames:
     - minDuration
@@ -1849,28 +1827,6 @@ definitions:
     - Hour
     - minDuration
     - maxDuration
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
-    - Minute
-    - Hour
-    - minDuration
-    - maxDuration
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
-    - Minute
-    - Hour
-    - minDuration
-    - maxDuration
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
-    - Minute
-    - Hour
     - Nanosecond
     - Microsecond
     - Millisecond
@@ -2893,9 +2849,9 @@ paths:
       summary: Get contacts
       tags:
       - Contacts
-  /v1/contacts/{id}:
+  /v1/contacts/{paymail}:
     get:
-      description: Get contacts by id
+      description: Get contact by paymail
       produces:
       - application/json
       responses:
@@ -2910,10 +2866,9 @@ paths:
           description: Internal server error - Error while searching for contacts
       security:
       - x-auth-xpub: []
-      summary: Get contacts by id
+      summary: Get contact by paymail
       tags:
       - Contacts
-  /v1/contacts/{paymail}:
     put:
       description: Add or update contact. When adding a new contact, the system utilizes
         Paymail's PIKE capability to dispatch an invitation request, asking the counterparty
